unpackaged/main/default/objects/ETI_BulkVehiclesUpload_Status__c/ETI_BulkVehiclesUpload_Status__c.object-meta.xml
<CustomObject>
    <label>BulkVehiclesUpload Status</label>
    <nameField>
        <displayFormat>BV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BulkVehiclesUpload Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>