unpackaged/main/default/objects/ETI_BulkVehiclesUpload_Status__c/fields/ETI_File_Id__c.field-meta.xml
<CustomField>
    <fullName>ETI_File_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>