unpackaged/main/default/objects/ETI_BulkVehiclesUpload_Status__c/fields/ETI_File_Name__c.field-meta.xml
<CustomField>
    <fullName>ETI_File_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>