unpackaged/main/default/objects/ETI_BulkVehiclesUpload_Status__c/fields/ETI_Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>ETI_Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>