unpackaged/main/default/objects/ETI_BulkVehiclesUpload_Status__c/fields/ETI_User__c.field-meta.xml
<CustomField>
    <fullName>ETI_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>